# ctrader-algo

./: .gitignore  README.md  TradeZenom_system_breakout.txt  pyproject.toml
.github/workflows/: ci.yml
apps/analytics/: metrics.py
apps/content_pipeline/: drafts.py
apps/discord_bot/: consumer.py  xp.py
apps/journal/: projections.py
apps/ledger/: ingest_backtest.py  repository.py
apps/operator_ui/: __init__.py  drafting.py  review.py  streamlit_app.py  workflow.py
apps/orchestrator/: approvals.py  backtest_manifest_writer.py  ctrader_cli.py  open_api_client.py  workflow.py
apps/prop_simulator/: evaluator.py  rules.py
docs/architecture/: cbot-boundaries.md  system-overview.md
docs/guides/: vps-download-and-run.md
docs/plans/: 2026-03-08-ctrader-tradezenom-pipeline.md
docs/runbooks/: ctrader-backtest-smoke.md  ctrader-cli-environment.md  desktop-automation-boundaries.md  operator-lifecycle-guide.md  promotion-gates.md
infra/compose/: postgres.yml
infra/db/: 001_create_ledger_tables.sql
libs/contracts/: approval_states.py  backtest_manifest.py  event_taxonomy.py  ledger_event.py  llm_commands.py  operator_workflow.py
libs/ctrader_reports/: backtest_parser.py
libs/llm/: provider.py  router.py  validator.py
libs/risk/: runtime_boundary.py
scripts/ci/: smoke.sh
scripts/ctrader/: run_backtest.sh
scripts/dev/: check.sh
tests/contract/: test_approval_state_machine.py  test_backtest_manifest_contract.py  test_backtest_manifest_writer.py  test_backtest_parser.py  test_ctrader_cli.py  test_discord_consumer.py  test_event_taxonomy.py  (+15 more)
(+21 files in other folders)
