[project]
name = "ctrader"
version = "0.1.0"
description = "Bootstrap workspace for cTrader trading system"
requires-python = ">=3.12"
dependencies = ["streamlit>=1.42,<2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
include = ["apps", "libs", "tests"]
extraPaths = [".", "/Users/minhvu/conda/lib/python3.12/site-packages"]
pythonVersion = "3.12"
